@@ -1,6 +1,7 @@
 package com.portfolio.backend.controller.cart;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
+import com.portfolio.backend.common.TestFixtures;
 import com.portfolio.backend.common.security.UserDetailsImpl;
 import com.portfolio.backend.common.security.UserImpl;
 import com.portfolio.backend.common.security.jwt.JwtTokenProvider;
@@ -24,9 +25,11 @@ import org.springframework.http.MediaType;
 import org.springframework.security.test.context.support.WithAnonymousUser;
 import org.springframework.security.test.web.servlet.request.SecurityMockMvcRequestPostProcessors;
 import org.springframework.test.web.servlet.MockMvc;
+import org.springframework.test.web.servlet.ResultActions;
+import org.springframework.test.web.servlet.ResultMatcher;
+import org.springframework.test.web.servlet.request.MockHttpServletRequestBuilder;
 
 import java.math.BigDecimal;
-import java.util.Arrays;
 import java.util.List;
 
 import static org.hamcrest.Matchers.hasSize;
@@ -38,6 +41,9 @@ import static org.springframework.test.web.servlet.request.MockMvcRequestBuilder
 import static org.springframework.test.web.servlet.result.MockMvcResultHandlers.print;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
 
+/**
+ * ProductCartController에 대한 웹 계층 테스트
+ */
 @WebMvcTest(
     controllers = ProductCartController.class,
     includeFilters = @ComponentScan.Filter(
@@ -46,6 +52,7 @@ import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.
     )
 )
 @Import(com.portfolio.backend.common.security.TestSecurityConfig.class)
+@DisplayName("ProductCartController 테스트")
 class ProductCartControllerTest {
 
     @Autowired
@@ -66,177 +73,199 @@ class ProductCartControllerTest {
     private List<ProductCartServiceResponse.Get> cartItems;
     private ProductCartServiceRequest.AddItem addItemRequest;
     private ProductCartServiceRequest.RemoveItem removeItemRequest;
-    private UserDetailsImpl userDetails;
-    private UserImpl userImpl;
+    private UserDetailsImpl regularUserDetails;
+    private UserDetailsImpl adminUserDetails;
+    private UserImpl regularUserImpl;
+    private UserImpl adminUserImpl;
 
     @BeforeEach
     void setUp() {
-        // 사용자 상세 설정
-        userImpl = new UserImpl(1L, "user@example.com", RoleType.USER);
-        userDetails = new UserDetailsImpl(userImpl);
+        // 사용자 설정
+        regularUserImpl = new UserImpl(TestFixtures.USER_ID_1, "user@example.com", RoleType.USER);
+        regularUserDetails = new UserDetailsImpl(regularUserImpl);
+        
+        adminUserImpl = new UserImpl(TestFixtures.USER_ID_2, "admin@example.com", RoleType.ADMIN);
+        adminUserDetails = new UserDetailsImpl(adminUserImpl);
         
         // 장바구니 응답 항목 설정
         ServiceBaseResponse.SimpleProduct simpleProduct1 = new ServiceBaseResponse.SimpleProduct(
-                1L, "맥북 프로", BigDecimal.valueOf(1800000), BigDecimal.valueOf(2000000), ProductStatus.ACTIVE
+                TestFixtures.PRODUCT_ID_1, "맥북 프로", 
+                BigDecimal.valueOf(1800000), BigDecimal.valueOf(2000000), 
+                ProductStatus.ACTIVE
         );
         
         ServiceBaseResponse.SimpleProduct simpleProduct2 = new ServiceBaseResponse.SimpleProduct(
-                2L, "아이폰 15", BigDecimal.valueOf(1500000), BigDecimal.valueOf(1700000), ProductStatus.ACTIVE
+                TestFixtures.PRODUCT_ID_2, "아이폰 15", 
+                BigDecimal.valueOf(1500000), BigDecimal.valueOf(1700000), 
+                ProductStatus.ACTIVE
         );
         
         cartItem1 = new ProductCartServiceResponse.Get(simpleProduct1, 1);
         cartItem2 = new ProductCartServiceResponse.Get(simpleProduct2, 2);
-        cartItems = Arrays.asList(cartItem1, cartItem2);
+        cartItems = List.of(cartItem1, cartItem2);
         
         // 요청 객체 설정
-        addItemRequest = new ProductCartServiceRequest.AddItem(1L, 3);
-        removeItemRequest = new ProductCartServiceRequest.RemoveItem(1L);
+        addItemRequest = new ProductCartServiceRequest.AddItem(TestFixtures.PRODUCT_ID_1, 3);
+        removeItemRequest = new ProductCartServiceRequest.RemoveItem(TestFixtures.PRODUCT_ID_1);
     }
 
     @Nested
-    @DisplayName("장바구니 목록 조회 테스트")
-    class GetCartItemsTest {
+    @DisplayName("장바구니 목록 조회 API")
+    class GetCartItemsApiTest {
 
         @Test
-        @DisplayName("인증된 사용자는 장바구니 목록을 조회할 수 있다")
+        @DisplayName("인증된 사용자는 장바구니 목록을 성공적으로 조회할 수 있다")
         void shouldGetCartItemsWithAuthentication() throws Exception {
             // Given
             when(productCartService.getCartItems(any(UserImpl.class))).thenReturn(cartItems);
 
             // When & Then
-            mockMvc.perform(get("/api/cart")
-                            .with(SecurityMockMvcRequestPostProcessors.user(userDetails))
-                            .contentType(MediaType.APPLICATION_JSON))
-                    .andDo(print())
-                    .andExpect(status().isOk())
-                    .andExpect(content().contentType(MediaType.APPLICATION_JSON))
-                    .andExpect(jsonPath("$", hasSize(2)))
-                    .andExpect(jsonPath("$[0].product.id", is(1)))
-                    .andExpect(jsonPath("$[0].product.name", is("맥북 프로")))
-                    .andExpect(jsonPath("$[0].quantity", is(1)))
-                    .andExpect(jsonPath("$[1].product.id", is(2)))
-                    .andExpect(jsonPath("$[1].product.name", is("아이폰 15")))
-                    .andExpect(jsonPath("$[1].quantity", is(2)));
+            performWithUserRoleAndExpect(
+                get("/api/cart"),
+                status().isOk()
+            )
+            .andExpect(content().contentType(MediaType.APPLICATION_JSON))
+            .andExpect(jsonPath("$", hasSize(2)))
+            .andExpect(jsonPath("$[0].product.id", is(1)))
+            .andExpect(jsonPath("$[0].product.name", is("맥북 프로")))
+            .andExpect(jsonPath("$[0].quantity", is(1)))
+            .andExpect(jsonPath("$[1].product.id", is(2)))
+            .andExpect(jsonPath("$[1].product.name", is("아이폰 15")))
+            .andExpect(jsonPath("$[1].quantity", is(2)));
 
             verify(productCartService).getCartItems(any(UserImpl.class));
         }
 
         @Test
-        @DisplayName("인증되지 않은 사용자는 장바구니 목록 조회 시 접근이 거부되어야 한다")
+        @DisplayName("인증되지 않은 사용자는 장바구니 목록 조회 시 인증 오류가 발생한다")
         @WithAnonymousUser
         void shouldDenyGetCartItemsWithoutAuthentication() throws Exception {
             // When & Then
             mockMvc.perform(get("/api/cart")
-                            .contentType(MediaType.APPLICATION_JSON))
-                    .andDo(print())
-                    .andExpect(status().isForbidden());
+                    .contentType(MediaType.APPLICATION_JSON))
+                .andDo(print())
+                .andExpect(status().isForbidden());
         }
     }
 
     @Nested
-    @DisplayName("장바구니 아이템 추가 테스트")
-    class AddCartItemTest {
+    @DisplayName("장바구니 아이템 추가 API")
+    class AddCartItemApiTest {
 
         @Test
-        @DisplayName("인증된 사용자는 장바구니에 아이템을 추가할 수 있다")
+        @DisplayName("인증된 사용자는 장바구니에 아이템을 성공적으로 추가할 수 있다")
         void shouldAddCartItemWithAuthentication() throws Exception {
             // When & Then
-            mockMvc.perform(post("/api/cart")
-                            .with(SecurityMockMvcRequestPostProcessors.csrf())
-                            .with(SecurityMockMvcRequestPostProcessors.user(userDetails))
-                            .contentType(MediaType.APPLICATION_JSON)
-                            .content(objectMapper.writeValueAsString(addItemRequest)))
-                    .andDo(print())
-                    .andExpect(status().isOk());
+            performWithUserRoleAndExpect(
+                post("/api/cart")
+                    .contentType(MediaType.APPLICATION_JSON)
+                    .content(objectMapper.writeValueAsString(addItemRequest)),
+                status().isOk()
+            );
 
             verify(productCartService).addCartItem(any(ProductCartServiceRequest.AddItem.class), any(UserImpl.class));
         }
 
         @Test
-        @DisplayName("인증되지 않은 사용자는 장바구니에 아이템 추가 시 접근이 거부되어야 한다")
+        @DisplayName("인증되지 않은 사용자는 장바구니에 아이템 추가 시 인증 오류가 발생한다")
         @WithAnonymousUser
         void shouldDenyAddCartItemWithoutAuthentication() throws Exception {
             // When & Then
             mockMvc.perform(post("/api/cart")
-                            .with(SecurityMockMvcRequestPostProcessors.csrf())
-                            .contentType(MediaType.APPLICATION_JSON)
-                            .content(objectMapper.writeValueAsString(addItemRequest)))
-                    .andDo(print())
-                    .andExpect(status().isForbidden());
+                    .with(SecurityMockMvcRequestPostProcessors.csrf())
+                    .contentType(MediaType.APPLICATION_JSON)
+                    .content(objectMapper.writeValueAsString(addItemRequest)))
+                .andDo(print())
+                .andExpect(status().isForbidden());
         }
 
         @Test
-        @DisplayName("유효하지 않은 요청으로 장바구니에 아이템 추가 시 검증 오류가 발생해야 한다")
+        @DisplayName("유효하지 않은 요청으로 장바구니에 아이템 추가 시 검증 오류가 발생한다")
         void shouldValidateAddCartItemRequest() throws Exception {
             // Given
-            ProductCartServiceRequest.AddItem invalidRequest = new ProductCartServiceRequest.AddItem(1L, -1); // 음수 수량
+            ProductCartServiceRequest.AddItem invalidRequest = new ProductCartServiceRequest.AddItem(
+                TestFixtures.PRODUCT_ID_1, -1  // 음수 수량은 유효하지 않음
+            );
 
             // When & Then
-            mockMvc.perform(post("/api/cart")
-                            .with(SecurityMockMvcRequestPostProcessors.csrf())
-                            .with(SecurityMockMvcRequestPostProcessors.user(userDetails))
-                            .contentType(MediaType.APPLICATION_JSON)
-                            .content(objectMapper.writeValueAsString(invalidRequest)))
-                    .andDo(print())
-                    .andExpect(status().isBadRequest());
+            performWithUserRoleAndExpect(
+                post("/api/cart")
+                    .contentType(MediaType.APPLICATION_JSON)
+                    .content(objectMapper.writeValueAsString(invalidRequest)),
+                status().isBadRequest()
+            );
         }
     }
 
     @Nested
-    @DisplayName("장바구니 아이템 제거 테스트")
-    class RemoveCartItemTest {
+    @DisplayName("장바구니 아이템 제거 API")
+    class RemoveCartItemApiTest {
 
         @Test
-        @DisplayName("인증된 사용자는 장바구니에서 아이템을 제거할 수 있다")
+        @DisplayName("인증된 사용자는 장바구니에서 아이템을 성공적으로 제거할 수 있다")
         void shouldRemoveCartItemWithAuthentication() throws Exception {
             // When & Then
-            mockMvc.perform(delete("/api/cart")
-                            .with(SecurityMockMvcRequestPostProcessors.csrf())
-                            .with(SecurityMockMvcRequestPostProcessors.user(userDetails))
-                            .contentType(MediaType.APPLICATION_JSON)
-                            .content(objectMapper.writeValueAsString(removeItemRequest)))
-                    .andDo(print())
-                    .andExpect(status().isOk());
+            performWithUserRoleAndExpect(
+                delete("/api/cart")
+                    .contentType(MediaType.APPLICATION_JSON)
+                    .content(objectMapper.writeValueAsString(removeItemRequest)),
+                status().isOk()
+            );
 
             verify(productCartService).removeCartItem(any(ProductCartServiceRequest.RemoveItem.class), any(UserImpl.class));
         }
 
         @Test
-        @DisplayName("인증되지 않은 사용자는 장바구니에서 아이템 제거 시 접근이 거부되어야 한다")
+        @DisplayName("인증되지 않은 사용자는 장바구니에서 아이템 제거 시 인증 오류가 발생한다")
         @WithAnonymousUser
         void shouldDenyRemoveCartItemWithoutAuthentication() throws Exception {
             // When & Then
             mockMvc.perform(delete("/api/cart")
-                            .with(SecurityMockMvcRequestPostProcessors.csrf())
-                            .contentType(MediaType.APPLICATION_JSON)
-                            .content(objectMapper.writeValueAsString(removeItemRequest)))
-                    .andDo(print())
-                    .andExpect(status().isForbidden());
+                    .with(SecurityMockMvcRequestPostProcessors.csrf())
+                    .contentType(MediaType.APPLICATION_JSON)
+                    .content(objectMapper.writeValueAsString(removeItemRequest)))
+                .andDo(print())
+                .andExpect(status().isForbidden());
         }
     }
 
     @Nested
     @DisplayName("관리자 권한 테스트")
-    class AdminUserTest {
+    class AdminRoleApiTest {
 
         @Test
-        @DisplayName("관리자 권한으로 장바구니 목록을 조회할 수 있다")
+        @DisplayName("관리자 권한으로 장바구니 목록을 성공적으로 조회할 수 있다")
         void shouldGetCartItemsWithAdminRole() throws Exception {
             // Given
-            UserImpl adminUserImpl = new UserImpl(2L, "admin@example.com", RoleType.ADMIN);
-            UserDetailsImpl adminUserDetails = new UserDetailsImpl(adminUserImpl);
             when(productCartService.getCartItems(any(UserImpl.class))).thenReturn(cartItems);
 
             // When & Then
-            mockMvc.perform(get("/api/cart")
-                            .with(SecurityMockMvcRequestPostProcessors.user(adminUserDetails))
-                            .contentType(MediaType.APPLICATION_JSON))
-                    .andDo(print())
-                    .andExpect(status().isOk())
-                    .andExpect(content().contentType(MediaType.APPLICATION_JSON))
-                    .andExpect(jsonPath("$", hasSize(2)));
+            performWithAdminRoleAndExpect(
+                get("/api/cart"),
+                status().isOk()
+            )
+            .andExpect(content().contentType(MediaType.APPLICATION_JSON))
+            .andExpect(jsonPath("$", hasSize(2)));
 
             verify(productCartService).getCartItems(any(UserImpl.class));
         }
+    }
+    
+    // 헬퍼 메소드 - 일반 사용자 권한으로 요청 수행 및 결과 검증
+    private ResultActions performWithUserRoleAndExpect(MockHttpServletRequestBuilder request, ResultMatcher expectedStatus) throws Exception {
+        return mockMvc.perform(request
+                .with(SecurityMockMvcRequestPostProcessors.csrf())
+                .with(SecurityMockMvcRequestPostProcessors.user(regularUserDetails)))
+            .andDo(print())
+            .andExpect(expectedStatus);
+    }
+    
+    // 헬퍼 메소드 - 관리자 권한으로 요청 수행 및 결과 검증
+    private ResultActions performWithAdminRoleAndExpect(MockHttpServletRequestBuilder request, ResultMatcher expectedStatus) throws Exception {
+        return mockMvc.perform(request
+                .with(SecurityMockMvcRequestPostProcessors.csrf())
+                .with(SecurityMockMvcRequestPostProcessors.user(adminUserDetails)))
+            .andDo(print())
+            .andExpect(expectedStatus);
     }
 }
